<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_setting_background"
    android:tag="layout/setting_layout_0"
    android:background="@color/popupwindow_bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:soundEffectsEnabled="false">
    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/setting_popup_bg_px"
        android:clickable="true"
        android:layout_width="@dimen/dp704"
        android:layout_height="@dimen/dp595"
        android:layout_centerInParent="true">
        <RelativeLayout
            android:id="@+id/activity_setting_rl1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp128">
            <ImageView
                android:id="@+id/activity_setting_close_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp32"
                android:layout_marginTop="@dimen/dp32"
                android:src="@drawable/ic_close"/>
            <TextView
                android:textSize="32px"
                android:textStyle="bold"
                android:textColor="@color/setting_title_text"
                android:id="@+id/activity_setting_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp32"
                android:layout_marginTop="@dimen/dp38"
                android:text="@string/setting_title"
                android:layout_toRightOf="@+id/activity_setting_close_iv"/>
        </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/activity_setting_ll2"
            android:layout_width="@dimen/dp704"
            android:layout_height="@dimen/dp152">
            <TextView
                android:textSize="28px"
                android:textStyle="bold"
                android:textColor="@color/setting_subtitle_text"
                android:id="@+id/activity_setting_rec_subtitle_tv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp40"
                android:layout_marginLeft="@dimen/dp48"
                android:text="@string/setting_subtitle_rec"/>
            <LinearLayout
                android:orientation="horizontal"
                android:background="@drawable/linear_layout_bg"
                android:layout_width="@dimen/dp642"
                android:layout_height="@dimen/dp80"
                android:layout_marginLeft="@dimen/dp32"
                android:layout_marginTop="@dimen/dp32">
                <androidx.appcompat.widget.AppCompatButton
                    android:textSize="29px"
                    android:textColor="@color/setting_content_text"
                    android:gravity="center"
                    android:id="@+id/activity_setting_rec_btn1_close"
                    android:background="@null"
                    android:layout_width="@dimen/dp160"
                    android:layout_height="@dimen/dp80"
                    android:text="@string/setting_rec_btn1_close"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:textSize="28px"
                    android:textColor="@color/setting_content_text"
                    android:gravity="center"
                    android:id="@+id/activity_setting_rec_btn2_min1"
                    android:background="@null"
                    android:layout_width="@dimen/dp160"
                    android:layout_height="@dimen/dp80"
                    android:text="@string/setting_rec_btn2_min1"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:textSize="28px"
                    android:textColor="@color/setting_content_text"
                    android:gravity="center"
                    android:id="@+id/activity_setting_rec_btn3_min2"
                    android:background="@null"
                    android:layout_width="@dimen/dp160"
                    android:layout_height="@dimen/dp80"
                    android:text="@string/setting_rec_btn3_min2"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:textSize="28px"
                    android:textColor="@color/setting_content_text"
                    android:gravity="center"
                    android:id="@+id/activity_setting_rec_btn4_min3"
                    android:background="@null"
                    android:layout_width="@dimen/dp160"
                    android:layout_height="@dimen/dp80"
                    android:text="@string/setting_rec_btn4_min3"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/activity_setting_ll4"
            android:layout_width="@dimen/dp704"
            android:layout_height="@dimen/dp88"
            android:layout_marginTop="@dimen/dp45">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40">
                <TextView
                    android:textSize="28px"
                    android:textStyle="bold"
                    android:textColor="@color/setting_subtitle_text"
                    android:id="@+id/activity_setting_store_subtitle_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp40"
                    android:layout_marginLeft="@dimen/dp48"
                    android:text="@string/setting_subtitle_store"
                    app:layout_constraintStart_toStartOf="parent"/>
                <TextView
                    android:textSize="28px"
                    android:textColor="@color/setting_subtitle_text"
                    android:id="@+id/activity_setting_store_space_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp30"
                    android:text="36%可用"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <RelativeLayout
                android:layout_width="@dimen/dp640"
                android:layout_height="@dimen/dp16"
                android:layout_marginLeft="@dimen/dp32"
                android:layout_marginTop="@dimen/dp32">
                <ProgressBar
                    android:id="@+id/activity_setting_store_progressBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:max="100"
                    android:progress="36"
                    android:progressDrawable="@drawable/my_progress_bar"
                    android:layout_centerVertical="true"
                    style="?android:attr/progressBarStyleHorizontal"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/activity_setting_rl5"
            android:layout_width="@dimen/dp704"
            android:layout_height="@dimen/dp80"
            android:layout_marginLeft="@dimen/dp28"
            android:layout_marginTop="@dimen/dp71"
            android:layout_marginRight="@dimen/dp28"
            android:layout_marginBottom="@dimen/dp53">
            <androidx.appcompat.widget.AppCompatButton
                android:textSize="28px"
                android:textColor="@drawable/btn_text_selector"
                android:gravity="center"
                android:id="@+id/activity_setting_set_btn1_clear_all"
                android:background="@drawable/btn_selector"
                android:layout_width="@dimen/dp200"
                android:layout_height="@dimen/dp80"
                android:text="@string/setting_settings_btn1_clear_all"/>
            <androidx.appcompat.widget.AppCompatButton
                android:textSize="28px"
                android:textColor="@drawable/btn_text_selector"
                android:gravity="center"
                android:id="@+id/activity_setting_set_btn2_eject_usb"
                android:background="@drawable/btn_selector"
                android:layout_width="@dimen/dp200"
                android:layout_height="@dimen/dp80"
                android:layout_marginLeft="@dimen/dp24"
                android:text="@string/setting_settings_btn2_eject_usb"/>
            <androidx.appcompat.widget.AppCompatButton
                android:textSize="28px"
                android:textColor="@drawable/btn_text_selector"
                android:gravity="center"
                android:id="@+id/activity_setting_set_btn3_restore_default"
                android:background="@drawable/btn_selector"
                android:layout_width="@dimen/dp200"
                android:layout_height="@dimen/dp80"
                android:layout_marginLeft="@dimen/dp24"
                android:text="@string/setting_settings_btn3_restore_default_settings"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
