<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/dialog_delete_layout_0"
    android:background="@color/popupwindow_bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="horizontal"
        android:background="@drawable/video_delete_bg_shape"
        android:layout_width="880px"
        android:layout_height="496px"
        android:layout_centerInParent="true">
        <TextView
            android:textSize="@dimen/sp32"
            android:textColor="@color/file_color_010"
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp56"
            android:text="@string/delete"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:textSize="@dimen/sp28"
            android:textColor="@color/file_color_011"
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp79"
            android:layout_marginBottom="@dimen/dp56"
            android:text="@string/delete_info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp129"
            android:layout_marginBottom="@dimen/dp56"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info">
            <TextView
                android:textSize="@dimen/sp28"
                android:textColor="@color/file_color_013"
                android:gravity="center"
                android:id="@+id/cancel"
                android:background="@drawable/video_cancel_bt_bg_shape"
                android:layout_width="@dimen/dp312"
                android:layout_height="@dimen/dp80"
                android:text="@string/cancel"
                app:layout_constraintTop_toBottomOf="@+id/title"/>
            <TextView
                android:textSize="@dimen/sp28"
                android:textColor="@color/file_color_015"
                android:gravity="center"
                android:id="@+id/confirm"
                android:background="@drawable/video_confirm_bt_bg_shape"
                android:layout_width="@dimen/dp312"
                android:layout_height="@dimen/dp80"
                android:text="@string/confirm"
                android:layout_marginStart="@dimen/dp40"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
