<?xml version="1.0" encoding="utf-8"?>
<com.autolink.dvr.p003ui.view.CrossConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:tag="layout/activity_file_0"
    android:background="@color/file_activity_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/activity_file_ll_top"
        layout="@layout/activity_file_top"/>
    <TextView
        android:textSize="28px"
        android:textColor="@color/file_color_01"
        android:layout_gravity="center"
        android:id="@+id/activity_file_content_tv"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp26"
        android:layout_marginBottom="@dimen/dp50"
        android:text="@string/choose_value"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_file_ll_top"/>
    <com.autolink.dvr.p003ui.view.DvrViewPager
        android:id="@+id/activity_file_content_vp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp8"
        android:layout_marginStart="@dimen/dp50"
        android:layout_marginEnd="@dimen/dp50"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_file_content_tv"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tips_layout_bg"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_tips_window"
            android:background="@drawable/top_pop_bg_shape"
            android:layout_width="@dimen/dp194"
            android:layout_height="@dimen/dp191"
            android:layout_marginTop="@dimen/dp98"
            android:src="@drawable/ic_back"
            android:layout_marginEnd="@dimen/dp26"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_switch_layout"
                android:background="@drawable/top_pop_item_bg_shape"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp80"
                android:layout_marginTop="@dimen/dp6"
                android:layout_marginStart="@dimen/dp6"
                android:layout_marginEnd="@dimen/dp6"
                app:layout_constraintTop_toTopOf="parent">
                <View
                    android:id="@+id/tips_point_1"
                    android:background="#39aeb2"
                    android:layout_width="@dimen/dp8"
                    android:layout_height="@dimen/dp8"
                    android:layout_marginStart="@dimen/dp31"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                    android:textSize="@dimen/sp24"
                    android:textColor="@color/file_color_05"
                    android:id="@+id/tips_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/list_switch_layout"
                android:background="@drawable/top_pop_item_bg_shape"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp80"
                android:layout_marginBottom="@dimen/dp6"
                android:layout_marginStart="@dimen/dp6"
                android:layout_marginEnd="@dimen/dp6"
                app:layout_constraintBottom_toBottomOf="parent">
                <View
                    android:id="@+id/tips_point_2"
                    android:background="@drawable/tips_point_select_shape"
                    android:layout_width="@dimen/dp8"
                    android:layout_height="@dimen/dp8"
                    android:layout_marginStart="@dimen/dp31"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                    android:textSize="@dimen/sp24"
                    android:textColor="@color/file_color_05"
                    android:id="@+id/tips_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.autolink.dvr.p003ui.view.CrossConstraintLayout>
